--- a/Ejercicio6/ejercicio6.html
+++ b/Ejercicio6/ejercicio6.html
@@ -26,7 +26,7 @@
                 <li>People of the Pride</li>
             </ul>
         </li>
-        <li>Everyday Life}
+        <li>Everyday Life
             <ul>
                 <li>Sunrise</li>
                 <li>Church</li>
